Added liquibase plugin in order to create tables into the database; Added dao and service for the new table & fix all configuration issues in order to be a functional wicket+spring+hibernate app

--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,15 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <java-version>1.7</java-version>
         <wicket.version>6.20.0</wicket.version>
-        <spring-core.version>4.1.7.RELEASE</spring-core.version>
-        <spring-context.version>4.0.6.RELEASE</spring-context.version>
-        <spring-tx.version>4.1.6.RELEASE</spring-tx.version>
-        <spring-orm.version>4.1.6.RELEASE</spring-orm.version>
-        <spring-test.version>4.1.6.RELEASE</spring-test.version>
+        <spring-core.version>4.2.0.RELEASE</spring-core.version>
+        <spring-context.version>4.2.0.RELEASE</spring-context.version>
+        <spring-tx.version>4.2.0.RELEASE</spring-tx.version>
+        <spring-orm.version>4.2.0.RELEASE</spring-orm.version>
+        <spring-test.version>4.2.0.RELEASE</spring-test.version>
+        <spring-web.version>4.2.0.RELEASE</spring-web.version>
+        <spring-webmvc.version>4.2.0.RELEASE</spring-webmvc.version>
         <hibernate.version>4.3.10.Final</hibernate.version>
     </properties>
 
@@ -30,6 +33,11 @@
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-extensions</artifactId>
             <version>${wicket.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.wicket</groupId>
+            <artifactId>wicket-spring</artifactId>
+            <version>1.4.17</version>
         </dependency>
 
         <!-- log4j -->
@@ -66,6 +74,17 @@
             <version>${spring-test.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring-web.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring-webmvc.version}</version>
+        </dependency>
+
 
         <!-- Hibernate -->
         <dependency>
@@ -73,6 +92,13 @@
             <artifactId>hibernate-core</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.36</version>
+        </dependency>
+
+        <!-- Tomcat -->
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>dbcp</artifactId>
@@ -86,10 +112,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
             <scope>provided</scope>
         </dependency>
 
@@ -98,7 +125,7 @@
     <build>
         <resources>
             <resource>
-                <filtering>false</filtering>
+                <filtering>true</filtering>
                 <directory>src/main/resources</directory>
             </resource>
             <resource>
@@ -117,6 +144,35 @@
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <propertyFile>src/main/resources/liquibase/liquibase.properties</propertyFile>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>update</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>5.1.36</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>javax.servlet</groupId>
+                        <artifactId>javax.servlet-api</artifactId>
+                        <version>3.0.1</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
