--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,8 +1,8 @@
 # jdbc properties
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=
-jdbc.username=
-jdbc.password=
+datasource.jdbc.driverClassName=com.mysql.jdbc.Driver
+datasource.jdbc.url=jdbc:mysql://localhost:3306/wysiwyg_db
+datasource.jdbc.username=root
+datasource.jdbc.password=
 
 #hibernate properties
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+datasource.hibernate.dialect=org.hibernate.dialect.MySQLDialect
